--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -49,7 +49,8 @@
   "rules": {
     "@typescript-eslint/no-unused-vars": "error",
     "@typescript-eslint/no-explicit-any": "error",
-    "react/react-in-jsx-scope": "off"
+    "react/react-in-jsx-scope": "off",
+    "react/function-component-definition": "off"
   },
   "ignorePatterns": ["**/*.js"]
 }
