--- a/package.json
+++ b/package.json
@@ -13,11 +13,18 @@
     "@svgr/webpack": "^6.2.1",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
+    "cross-env": "^7.0.3",
+    "dotenv": "^16.0.1",
+    "global": "^4.4.0",
     "jest-environment-jsdom": "^28.1.2",
     "next": "12.2.0",
+    "pg": "^8.7.3",
+    "pg-hstore": "^2.3.4",
     "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "sequelize": "^6.21.2",
+    "sequelize-cli": "^6.4.1",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
@@ -25,6 +32,7 @@
     "@babel/eslint-parser": "^7.18.2",
     "@testing-library/user-event": "^14.2.1",
     "@types/node": "18.0.0",
+    "@types/pg": "^8.6.5",
     "@types/react": "18.0.14",
     "@types/react-dom": "18.0.5",
     "@types/styled-components": "^5.1.25",
