--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -48,7 +48,7 @@
   },
   "rules": {
     "@typescript-eslint/no-unused-vars": "error",
-    "@typescript-eslint/no-explicit-any": "error",
+    "@typescript-eslint/no-explicit-any": "off",
     "react/react-in-jsx-scope": "off",
     "react/function-component-definition": "off"
   },
