--- a/package.json
+++ b/package.json
@@ -7,17 +7,20 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "jest --watch"
+    "test": "cross-env NODE_ENV=test jest --watch"
   },
   "dependencies": {
     "@svgr/webpack": "^6.2.1",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
+    "bcryptjs": "^2.4.3",
     "cross-env": "^7.0.3",
     "dotenv": "^16.0.1",
     "global": "^4.4.0",
+    "iron-session": "^6.1.3",
     "jest-environment-jsdom": "^28.1.2",
     "next": "12.2.0",
+    "nodemailer": "^6.7.6",
     "pg": "^8.7.3",
     "pg-hstore": "^2.3.4",
     "prop-types": "^15.8.1",
@@ -25,19 +28,23 @@
     "react-dom": "18.2.0",
     "sequelize": "^6.21.2",
     "sequelize-cli": "^6.4.1",
-    "styled-components": "^5.3.5"
+    "styled-components": "^5.3.5",
+    "swr": "^1.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.18.6",
     "@babel/eslint-parser": "^7.18.2",
     "@testing-library/user-event": "^14.2.1",
+    "@types/bcryptjs": "^2.4.2",
     "@types/node": "18.0.0",
     "@types/pg": "^8.6.5",
     "@types/react": "18.0.14",
     "@types/react-dom": "18.0.5",
     "@types/styled-components": "^5.1.25",
+    "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.13.0",
     "@typescript-eslint/parser": "^5.0.0",
+    "babel-jest": "^28.1.2",
     "babel-plugin-styled-components": "^2.0.7",
     "eslint": "^8.18.0",
     "eslint-config-airbnb": "^19.0.4",
@@ -52,6 +59,8 @@
     "eslint-plugin-testing-library": "^5.5.1",
     "jest": "^28.1.2",
     "prettier": "^2.7.1",
+    "supertest": "^6.2.4",
+    "ts-jest": "^28.0.5",
     "typescript": "4.7.4"
   }
 }
