--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -50,7 +50,8 @@
     "@typescript-eslint/no-unused-vars": "error",
     "@typescript-eslint/no-explicit-any": "off",
     "react/react-in-jsx-scope": "off",
-    "react/function-component-definition": "off"
+    "react/function-component-definition": "off",
+    "@typescript-eslint/no-floating-promises": ["error"]
   },
   "ignorePatterns": ["**/*.js"]
 }
