--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@testing-library/user-event": "^14.2.1",
     "@types/bcryptjs": "^2.4.2",
     "@types/node": "18.0.0",
+    "@types/nodemailer": "^6.4.4",
     "@types/pg": "^8.6.5",
     "@types/react": "18.0.14",
     "@types/react-dom": "18.0.5",
