--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cross-env": "^7.0.3",
     "dotenv": "^16.0.1",
     "global": "^4.4.0",
+    "ioredis": "^5.1.0",
     "iron-session": "^6.1.3",
     "jest-environment-jsdom": "^28.1.2",
     "next": "12.2.0",
@@ -34,6 +35,7 @@
   "devDependencies": {
     "@babel/core": "^7.18.6",
     "@babel/eslint-parser": "^7.18.2",
+    "@babel/plugin-transform-modules-commonjs": "^7.18.6",
     "@testing-library/user-event": "^14.2.1",
     "@types/bcryptjs": "^2.4.2",
     "@types/node": "18.0.0",
@@ -47,6 +49,7 @@
     "@typescript-eslint/parser": "^5.0.0",
     "babel-jest": "^28.1.2",
     "babel-plugin-styled-components": "^2.0.7",
+    "core-js": "^3.23.3",
     "eslint": "^8.18.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^17.0.0",
