--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "ioredis": "^5.1.0",
     "iron-session": "^6.1.3",
     "jest-environment-jsdom": "^28.1.2",
+    "jet-logger": "^1.1.5",
     "next": "12.2.0",
     "nodemailer": "^6.7.6",
     "pg": "^8.7.3",
