--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@babel/core": "^7.18.6",
     "@babel/eslint-parser": "^7.18.2",
     "@babel/plugin-transform-modules-commonjs": "^7.18.6",
+    "@peculiar/webcrypto": "^1.4.0",
     "@testing-library/user-event": "^14.2.1",
     "@types/bcryptjs": "^2.4.2",
     "@types/node": "18.0.0",
