--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-testing-library": "^5.5.1",
     "jest": "^28.1.2",
+    "jest-fetch-mock": "^3.0.3",
     "prettier": "^2.7.1",
     "supertest": "^6.2.4",
     "ts-jest": "^28.0.5",
