--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "iron-session": "^6.1.3",
     "jest-environment-jsdom": "^28.1.2",
     "jet-logger": "^1.1.5",
+    "multiparty": "^4.2.3",
     "next": "12.2.0",
     "nodemailer": "^6.7.6",
     "pg": "^8.7.3",
@@ -41,6 +42,7 @@
     "@peculiar/webcrypto": "^1.4.0",
     "@testing-library/user-event": "^14.2.1",
     "@types/bcryptjs": "^2.4.2",
+    "@types/multiparty": "^0.0.33",
     "@types/node": "18.0.0",
     "@types/nodemailer": "^6.4.4",
     "@types/pg": "^8.6.5",
