--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-simple-wysiwyg": "^2.0.2",
     "sequelize": "^6.21.2",
     "sequelize-cli": "^6.4.1",
     "styled-components": "^5.3.5",
