--- a/package.json
+++ b/package.json
@@ -10,12 +10,18 @@
     "test": "cross-env NODE_ENV=test jest --watch"
   },
   "dependencies": {
+    "@draft-js-plugins/anchor": "^4.1.4",
+    "@draft-js-plugins/editor": "^4.1.3",
+    "@draft-js-plugins/inline-toolbar": "^4.1.6",
     "@svgr/webpack": "^6.2.1",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
+    "@types/draft-js": "^0.11.9",
     "bcryptjs": "^2.4.3",
     "cross-env": "^7.0.3",
     "dotenv": "^16.0.1",
+    "draft-js": "^0.11.7",
+    "draft-js-export-html": "^1.4.1",
     "express-rate-limit": "^6.4.0",
     "global": "^4.4.0",
     "ioredis": "^5.1.0",
@@ -30,7 +36,7 @@
     "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-simple-wysiwyg": "^2.0.2",
+    "sanitize-html": "^2.7.0",
     "sequelize": "^6.21.2",
     "sequelize-cli": "^6.4.1",
     "styled-components": "^5.3.5",
@@ -49,6 +55,7 @@
     "@types/pg": "^8.6.5",
     "@types/react": "18.0.14",
     "@types/react-dom": "18.0.5",
+    "@types/sanitize-html": "^2.6.2",
     "@types/styled-components": "^5.1.25",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.13.0",
