--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "draft-js-export-html": "^1.4.1",
     "express-rate-limit": "^6.4.0",
     "global": "^4.4.0",
+    "immutable": "^4.1.0",
     "ioredis": "^5.1.0",
     "iron-session": "^6.1.3",
     "jest-environment-jsdom": "^28.1.2",
