--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@types/draft-js": "^0.11.9",
+    "@types/formidable": "^2.0.5",
     "bcryptjs": "^2.4.3",
     "cross-env": "^7.0.3",
     "dotenv": "^16.0.1",
@@ -77,6 +78,7 @@
     "eslint-plugin-testing-library": "^5.5.1",
     "jest": "^28.1.2",
     "jest-fetch-mock": "^3.0.3",
+    "jest-skipped-reporter": "^0.0.5",
     "prettier": "^2.7.1",
     "supertest": "^6.2.4",
     "ts-jest": "^28.0.5",
