--- a/package.json
+++ b/package.json
@@ -76,9 +76,11 @@
     "eslint-plugin-react": "^7.30.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-testing-library": "^5.5.1",
+    "form-data": "^4.0.0",
     "jest": "^28.1.2",
     "jest-fetch-mock": "^3.0.3",
     "jest-skipped-reporter": "^0.0.5",
+    "node-mocks-http": "^1.11.0",
     "prettier": "^2.7.1",
     "supertest": "^6.2.4",
     "ts-jest": "^28.0.5",
