creating a CRUD for my posts' route

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "draft-js": "^0.11.7",
     "draft-js-export-html": "^1.4.1",
     "express-rate-limit": "^6.4.0",
+    "formidable": "^2.0.1",
     "global": "^4.4.0",
     "immutable": "^4.1.0",
     "ioredis": "^5.1.0",
